  * checks/testsuite.{desc,pm}:
    + [NT] Apply patch from Lucas Kanashiro to add a tag for recommending
      packagers to create an autopkgtest for their package.
      (Closes: #859467)
    + [NT] Fix false-positive "missing-runtime-test-file" when the
      "Tests-Directory" field is set to a single dot.  Thanks to
      Ian Jackson for reporting the issue.  (Closes: #849880)

  * coll/debian-readme{,desc}:
    + [NT] Remove.  Merge what little functionality it offers into the
      debian-readme check.

  * data/common/source-fields:
    + [NT] Add new "Testsuite-Restrictions" field.
  * data/files/standard-files:
    + [NT] Add more common files based on feedback from Helmut Grohne.
  * data/obsolete-sites/obsolete-sites:
    + [BR] Apply patch from Hideki Yamane in order to warn about
      fedorahosted.  (Closes: #856954).
    + [NT] Apply patch from Hideki Yamane to warn about codeplex.com
      closing down.  (Closes: #859412).
  * data/scripts/interpreters:
    + [NT] Add stap as a known interpreter.  Thanks to gustavo panizzo
      for the suggestion.  (Closes: #858326)
  * data/spelling/corrections:
    + [NT] Apply patches from Edward Betts to fix bugs in the correction
      word lists.  (Closes: #852005, #852084)
    + [NT] Apply patch from Edward Betts to remove corrections for
      "targetted" and "targetting" as they are valid alternative
      spellings in AU.  (Closes: #852145)
    + [EB] Add some more spelling corrections.  (Closes: #852369, #852404,
      #852407, #852409, #852410, #852411, #852413, #852414, #852416,
      #852419, #852421, #852426)
    + [CL] Add "none were" -> "none was" multiword correction.
      (Closes: 860558)

  * debian/control:
    + [NT] Add explicit (Build-)Depends on dpkg (>= 1.17.14) to make it
      explicit that we no longer support Wheezy or older.
    + [NT] Drop versioned dependencies that are there to assist to
      Wheezy.
  * debian/copyright:
    + [EB] Add Edward Betts.
