@@ -1,0 +1,19 @@
+# List of known/supported triggers.
+# Format:
+#    <trigger-type> => key=value[, key2=value2, ...]
+#
+# Known key/values:
+#   await (bool): Whether this is an await trigger
+#   implicit-await (bool): Whether this is an implicit await trigger
+#
+# Manually sorted by name.
+#
+
+activate         => await=1, implicit-await=1
+activate-await   => await=1
+activate-noawait => await=0
+
+interest         => await=1, implicit-await=1
+interest-await   => await=1
+interest-noawait => await=0
+
