@@ -165,4 +165,6 @@ W: maintainer-scripts: possibly-insecure-handling-of-tmp-files-in-maintainer-scr
 W: maintainer-scripts: possibly-insecure-handling-of-tmp-files-in-maintainer-script postrm:40
 W: maintainer-scripts: postinst-does-not-load-confmodule
 W: maintainer-scripts: postrm-does-not-purge-debconf
+W: maintainer-scripts: uses-implicit-await-trigger activate foo (line 2)
+W: maintainer-scripts: uses-implicit-await-trigger interest bar (line 4)
 X: maintainer-scripts: maintainer-script-may-use-dir_to_symlink_helper postinst:5
